# unitables

./: .clang-format  .gitignore  AGENTS.md  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  commands.sh  unitables.c  unitables.h  unitables.py
ref/: LICENSE  utf8proc.c  utf8proc.jl
