load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "unitables_generator",
    srcs = ["unitables.py"],
    main = "unitables.py",
)

UCD_FILES = {
    "--unicode-data": "@unicode_data//file",
    "--composition-exclusions": "@composition_exclusions//file",
    "--case-folding": "@case_folding//file",
    "--grapheme-break-property": "@grapheme_break_property//file",
    "--emoji-data": "@emoji_data//file",
    "--derived-core-properties": "@derived_core_properties//file",
}

GENERATOR_CMD = "$(location :unitables_generator) $(RULEDIR) " + " ".join(
    ["%s=$(location %s)" % (flag, label) for flag, label in UCD_FILES.items()],
)

genrule(
    name = "generate_unitables",
    srcs = UCD_FILES.values(),
    outs = [
        "unitables_data.c",
    ],
    tools = [":unitables_generator"],
    cmd = GENERATOR_CMD,
)

cc_library(
    name = "unitables",
    textual_hdrs = ["unitables_data.c"],
    srcs = ["unitables.c"],
    hdrs = ["unitables.h"],
    visibility = ["//visibility:public"],
)
